# lilapalooza

./: README.md  magnetic_elements_reference.txt  main.py  pyproject.toml  streamlit_app.py
