[project]
name = "lilapalooza"
version = "0.1.0"
description = "Materials Project Lilapalooza - A comprehensive tool for analyzing magnetic moments, metallic nature, and thermodynamic stability of materials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mp-api",
    "numpy",
    "matplotlib",
    "ipykernel>=7.1.0",
    "streamlit>=1.28.0",
]
